--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,32 @@
-h1{
-    color: red;
+.card-users-item{
+    margin-top: 16px;
+    padding: 4px;
+}
+
+.card-img-top{
+    max-width: 286px;
+    max-height: 190px;
+    min-width: 286px;
+    min-height: 190px;
+    width: 100%;
+    height: 100%;
+}
+
+.login-logout{
+    margin-left: 10px; 
+}
+
+table {
+    font-size: 14px;
+    font-family: monospace;
+}
+
+a.btn.btn-link  {
+    font-size: 14px;
+}
+
+.btn.btn-link:hover,
+.login-logout .login:hover,
+.login-logout .logout:hover  {
+    color: tomato;
 }
