--- a/src/resource/views/partials/header.handlebars
+++ b/src/resource/views/partials/header.handlebars
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Drive Me Crazy</a>
+    <a class="navbar-brand" href="/">Xàm xàm app</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/me/stored/">Stored</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/user/create">Create</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">Incomming...</a>
@@ -20,6 +20,9 @@
         <input class="form-control me-2" type="search" placeholder="Tìm kiếm..." aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+      <div class="login-logout">
+          <a class="login">Đăng nhập</a> <div> </div> <a class="logout">Đăng xuất</a>
+      </div>
     </div>
   </div>
 </nav>  
