#This is new Commit Completed Modified Method

--- a/src/resource/views/user/me.handlebars
+++ b/src/resource/views/user/me.handlebars
@@ -6,7 +6,8 @@
       <th scope="col">#</th>
       <th scope="col">Name</th>
       <th scope="col">Description</th>
-      <th scope="col" colspan="2">Create At</th>
+      <th scope="col" ></th>Create At</th>
+      <th scope="col" >Actions</th>
     </tr>
   </thead>
   <tbody>
