--- a/src/resource/views/partials/header.handlebars
+++ b/src/resource/views/partials/header.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Xàm xàm app</a>
+    <a class="navbar-brand" href="/"><i class="bi bi-balloon-heart-fill"></i>&nbsp;&nbsp;Let's</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
