--- a/src/resource/views/user/detail.handlebars
+++ b/src/resource/views/user/detail.handlebars
@@ -1,14 +1,14 @@
 <div class="mt-4">
     <div class="row">
         <div class="col-lg-3">
-            <button>Truy cập</button>
+            <button class="btn btn-secondary">Truy cập</button>
         </div>
         <div class="col-lg-9">
             <h2>{{x.name}}</h2>
-            <iframe width="560" height="315" src={{x.videoId}} title="YouTube video player" frameborder="0"
+            {{!-- <iframe width="560" height="315" src={{x.videoId}} title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
-            </iframe>
+            </iframe> --}}
             <p>{{x.description}}</p>
         </div>
     </div>
